# vnprices-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  config.yaml  llms.txt  pyproject.toml  pytest.ini  registry.yaml  requirements.txt  server.py  vnstock-catalog.yaml
docs/: RESEARCH_REPORT.md  company.md  funds.md  number format.md  quarter ratios.md  quarter statements.md  troubleshoot.md
examples/: questions.md
tests/: README.md  conftest.py  test_fetch.py  test_financial_year_alignment.py
