[project]
name = "vnprices-mcp"
version = "1.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.5.0",
    "mcp[cli]>=1.20.0",
    "osqp>=1.0.4",
    "pandas>=2.3.3",
    "pyportfolioopt>=1.5.6",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "vnstock3>=3.2.1",
]
